// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render completed determinant progress circle 1`] = `
.c0 {
  height: 3rem;
  width: 3rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
  stroke-dasharray: 138.23007675795088 138.23007675795088;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: dpAsNn 1s ease infinite;
  animation: dpAsNn 1s ease infinite;
  stroke-dashoffset: 138.23007675795088;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

<div>
  <svg
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
    <circle
      class="c2"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
  </svg>
</div>
`;

exports[`render determinant progress circle 1`] = `
.c0 {
  height: 3rem;
  width: 3rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
  stroke-dasharray: 138.23007675795088 138.23007675795088;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: dpAsNn 1s ease infinite;
  animation: dpAsNn 1s ease infinite;
  stroke-dashoffset: 138.23007675795088;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

<div>
  <svg
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
    <circle
      class="c2"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
  </svg>
</div>
`;

exports[`render error determinant progress circle 1`] = `
.c0 {
  height: 3rem;
  width: 3rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
  stroke-dasharray: 138.23007675795088 138.23007675795088;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: dpAsNn 1s ease infinite;
  animation: dpAsNn 1s ease infinite;
  stroke-dashoffset: 138.23007675795088;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

<div>
  <svg
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
    <circle
      class="c2"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
  </svg>
</div>
`;

exports[`render indeterminant progress bar 1`] = `
.c0 {
  height: 3rem;
  width: 3rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
  stroke-dasharray: 138.23007675795088 138.23007675795088;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: dpAsNn 1s ease infinite;
  animation: dpAsNn 1s ease infinite;
  stroke-dashoffset: 138.23007675795088;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

<div>
  <svg
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
    <circle
      class="c2"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
  </svg>
</div>
`;

exports[`render large progress circle 1`] = `
.c0 {
  height: 5rem;
  width: 5rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.5rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.5rem;
  stroke: #ECEEF5;
  stroke-dasharray: 226.1946710584651 226.1946710584651;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: ibtQPx 1s ease infinite;
  animation: ibtQPx 1s ease infinite;
  stroke-dashoffset: 226.1946710584651;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

<div>
  <svg
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="2.5rem"
      cy="2.5rem"
      r="2.25rem"
    />
    <circle
      class="c2"
      cx="2.5rem"
      cy="2.5rem"
      r="2.25rem"
    />
  </svg>
</div>
`;

exports[`render medium progress circle 1`] = `
.c0 {
  height: 3rem;
  width: 3rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
  stroke-dasharray: 138.23007675795088 138.23007675795088;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: dpAsNn 1s ease infinite;
  animation: dpAsNn 1s ease infinite;
  stroke-dashoffset: 138.23007675795088;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

<div>
  <svg
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
    <circle
      class="c2"
      cx="1.5rem"
      cy="1.5rem"
      r="1.375rem"
    />
  </svg>
</div>
`;

exports[`render small progress circle 1`] = `
.c0 {
  height: 2rem;
  width: 2rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.25rem;
  stroke: #ECEEF5;
  stroke-dasharray: 87.96459430051421 87.96459430051421;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: cYXnLG 1s ease infinite;
  animation: cYXnLG 1s ease infinite;
  stroke-dashoffset: 87.96459430051421;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

<div>
  <svg
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="1rem"
      cy="1rem"
      r="0.875rem"
    />
    <circle
      class="c2"
      cx="1rem"
      cy="1rem"
      r="0.875rem"
    />
  </svg>
</div>
`;

exports[`render xSmall progress circle 1`] = `
.c0 {
  height: 1rem;
  width: 1rem;
}

.c1 {
  fill: transparent;
  stroke-width: 0.125rem;
  stroke: #ECEEF5;
}

.c2 {
  fill: transparent;
  stroke-width: 0.125rem;
  stroke: #ECEEF5;
  stroke-dasharray: 43.982297150257104 43.982297150257104;
  stroke: #3C64F4;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: cWvsXs 1s ease infinite;
  animation: cWvsXs 1s ease infinite;
  stroke-dashoffset: 43.982297150257104;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: stroke-dashoffset 0.35s;
  transition: stroke-dashoffset 0.35s;
}

<div>
  <svg
    class="c0"
    role="progressbar"
  >
    <circle
      class="c1"
      cx="0.5rem"
      cy="0.5rem"
      r="0.4375rem"
    />
    <circle
      class="c2"
      cx="0.5rem"
      cy="0.5rem"
      r="0.4375rem"
    />
  </svg>
</div>
`;
